v3: Base image upgrade.